--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title><%=heading%></title>
+	<title><%=title%></title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="shortcut icon" href="https://raw.githubusercontent.com/nodejs/node/master/src/res/node.ico" />
@@ -18,7 +18,6 @@
 
 <div class="p-5 bg-primary text-white text-center">
 <h1><%=heading%></h1>
-	<p>Resize this responsive page to see the effect!</p>
 </div>
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
@@ -28,13 +27,13 @@
 				<a class="nav-link" href="/">Home</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="about">About</a>
+				<a class="nav-link" href="sg">Gibson SG</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="#">Link</a>
+				<a class="nav-link" href="stratocaster">Fender Stratocaster</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link disabled" href="#">Disabled</a>
+				<a class="nav-link" href="lespaul">Gibson Les Paul</a>
 			</li>
 		</ul>
 	</div>
@@ -42,5 +41,5 @@
 
 <div class="container mt-5">
 <div class="row">
-<div class="col-sm-4">
+<div style="display: flex; flex-flow: row nowrap; justify-content: flex-start; align-items: flex-start; gap: 25px;">
 <!--  views/partials/header.ejs ends here  -->
